# fantasyf1

./: Cargo.toml  README.md
src/: lib.rs  main.rs  puller.rs  result.rs  score.rs
src/puller/: mod.rs
