[package]
name = "fantasyf1"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
chrono = { version = "0.4.39", features = ["serde"] }
clap = { version = "4.5.27", features = ["derive"] }
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_alias = "0.0.2"
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["full"] }
